--- a/Air_write_system/src/App.css
+++ b/Air_write_system/src/App.css
@@ -1,3 +1,5 @@
+
+
 #root {
   margin: 0 ;
   padding: 0;
@@ -6,7 +8,6 @@
 }
 
 .logo {
-  height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
@@ -298,6 +299,7 @@ a{
 /* landing page styling */
 .container{
   margin-top: 7px;
+  padding: 5px ;
   display: flex;
   justify-content: space-between;
   height: calc(100vh - 12vh);
@@ -382,7 +384,6 @@ a{
 .content-right{
   width: calc(100% - 50% - 14px);
   align-items: center;
- 
   border-radius: 20px;
   height: auto;
   background-image: url('../public/right.webp');
@@ -408,6 +409,7 @@ a{
 }
 
 .content-title h1, p{
+  padding: 7px 0px;
   font-family: sans-serif;
 }
 .title-edt{
@@ -593,4 +595,109 @@ a{
 .card-disc p{
   color: #6b7280;
   line-height: 1.5;
+}
+
+/* footer styling css */
+.footer-container{
+  width: 100%;
+  border-top: 1px solid #666;
+  text-align: center;
+}
+
+.footer-warpper{
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  margin: 20px 0px;
+  padding: 20px;
+}
+
+.footer-left{
+  padding: 2px;
+  text-align: left;
+}
+
+.footer-logo{
+  align-items: center;
+  display: inline-flex  ;
+  height: 2rem;
+  cursor: pointer;
+}
+.footer-logo img{
+  margin-right  : 10px;
+  height: 2rem;
+  object-fit: cover;
+}
+
+.footer-social{
+  display: inline-flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+.social-platform{
+  cursor: pointer ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  background: #74788087;
+  border-radius: 10px;
+  transition: all .3s ease;
+ 
+}
+
+.social-platform:hover{
+  transform: translateY(-3px);
+  background-color: #4a6cf7;
+}
+
+.footer-text p{
+  font-size: 16px;
+  color: #666;
+  letter-spacing: 0px;
+}
+.footer-right{
+  width: 40%;
+}
+
+.footer-list{
+  display: flex;
+  justify-content: space-around;
+  text-align: start;
+}
+
+.footer-list h3{
+  margin: 7px 0px;
+  font-family: sans-serif;
+  font-size: 18px;
+}
+.product-list li,.legal-list li{
+  list-style: none;
+  padding: 5px 0px;
+}
+.product-list a, .legal-list a{
+    font-size: 12px;
+    font-weight: 200;
+    color: #6b7280;
+    transition: all .3s ease  ;
+}
+.product-list a:hover ,.legal-list a:hover{
+  color:#343436 ;
+}
+
+.copy-right{
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+ 
+}
+
+
+.copy-right-text{
+  font-size: 12px;
+  color:#484849 ;
 }
